use width instead of flex shorthand to fix wrapping issue

--- a/src/scss/scope/_typography.scss
+++ b/src/scss/scope/_typography.scss
@@ -145,7 +145,7 @@
     }
 
     @include breakpoint(md) {
-      flex: 0 0 30%;
+      width: 30%;
       padding-bottom: $spacing-4;
       margin-bottom: $spacing-4;
 
@@ -169,7 +169,7 @@
     }
 
     @include breakpoint(md) {
-      flex: 0 0 70%;
+      width: 70%;
     }
   }
 
